trying to get my updates pushed to my buddy, the last push didn't do it apparently

--- a/main.css
+++ b/main.css
@@ -52,8 +52,11 @@ body{
     margin: 0%;
 }
 .products {
-    display: flex;
+    display: flex; flex-wrap: wrap;
 }
 
+.addtocart{
+    background-color: #bf7631;
+}
 
 footer{}
