trying to get my updates pushed to my buddy, the last push didn't do it apparently

--- a/main.css
+++ b/main.css
@@ -45,6 +45,10 @@ main{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.manhands{
+    width: 1920px;
+    height: 633px;
+}
 
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
